{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 350,
  "lineage": "89505a9b-088c-7dc6-730b-80505259df00",
  "resources": [
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aft-vpc-natgw-01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab2af1b49a91b555",
            "domain": "vpc",
            "id": "eipalloc-0ab2af1b49a91b555",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-198-174-129.compute-1.amazonaws.com",
            "public_ip": "34.198.174.129",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aft.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aft-vpc-natgw-02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b81cec0a48e24165",
            "domain": "vpc",
            "id": "eipalloc-0b81cec0a48e24165",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-86-192-200.compute-1.amazonaws.com",
            "public_ip": "52.86.192.200",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aft.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aft-vpc-igw",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:internet-gateway/igw-0d941641f73d53435",
            "id": "igw-0d941641f73d53435",
            "owner_id": "425040721490",
            "tags": {
              "Name": "aft-vpc-igw"
            },
            "tags_all": {
              "Name": "aft-vpc-igw",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aft-vpc-natgw-01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab2af1b49a91b555",
            "connectivity_type": "public",
            "id": "nat-0ff4b9c340530dbfe",
            "network_interface_id": "eni-027185fda672cc1fb",
            "private_ip": "192.168.2.76",
            "public_ip": "34.198.174.129",
            "subnet_id": "subnet-0cb49a606f4458ae0",
            "tags": {
              "Name": "aft-vpc-natgw-01"
            },
            "tags_all": {
              "Name": "aft-vpc-natgw-01",
              "managed_by": "AFT"
            }
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aft-vpc-natgw-02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b81cec0a48e24165",
            "connectivity_type": "public",
            "id": "nat-028cfe93ccf214962",
            "network_interface_id": "eni-0413e7422581945d8",
            "private_ip": "192.168.2.202",
            "public_ip": "52.86.192.200",
            "subnet_id": "subnet-0bcc666269c111962",
            "tags": {
              "Name": "aft-vpc-natgw-02"
            },
            "tags_all": {
              "Name": "aft-vpc-natgw-02",
              "managed_by": "AFT"
            }
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:route-table/rtb-0a5c4dddbca47655a",
            "id": "rtb-0a5c4dddbca47655a",
            "owner_id": "425040721490",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ff4b9c340530dbfe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-private-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-01",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:route-table/rtb-079bbdd1d37a2e7e2",
            "id": "rtb-079bbdd1d37a2e7e2",
            "owner_id": "425040721490",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-028cfe93ccf214962",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-private-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-02",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:route-table/rtb-0b245739e0ffedcbb",
            "id": "rtb-0b245739e0ffedcbb",
            "owner_id": "425040721490",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d941641f73d53435",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-public-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-01",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbbe2e5607b6086f",
            "route_table_id": "rtb-0a5c4dddbca47655a",
            "subnet_id": "subnet-0d14726aba41bce43"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b13d4f63063dd9ac",
            "route_table_id": "rtb-079bbdd1d37a2e7e2",
            "subnet_id": "subnet-0b1c35d6498b19240"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0c87218149eb7c6",
            "route_table_id": "rtb-0b245739e0ffedcbb",
            "subnet_id": "subnet-0cb49a606f4458ae0"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_public_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07adebab8fac63fbd",
            "route_table_id": "rtb-0b245739e0ffedcbb",
            "subnet_id": "subnet-0bcc666269c111962"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aft_vpc_default_sg",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:security-group/sg-0ef192ccb4c292519",
            "description": "Allow outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef192ccb4c292519",
            "ingress": [],
            "name": "aft-default-sg",
            "name_prefix": "",
            "owner_id": "425040721490",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aft_vpc_endpoint_sg",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:security-group/sg-046eb52979681b58a",
            "description": "Allow inbound HTTPS traffic and all Outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046eb52979681b58a",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/22"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/22"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aft-endpoint-sg",
            "name_prefix": "",
            "owner_id": "425040721490",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:subnet/subnet-0d14726aba41bce43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d14726aba41bce43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425040721490",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-private-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-01",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:subnet/subnet-0b1c35d6498b19240",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1c35d6498b19240",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425040721490",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-private-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-02",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:subnet/subnet-0cb49a606f4458ae0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb49a606f4458ae0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425040721490",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-public-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-01",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_public_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:subnet/subnet-0bcc666269c111962",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcc666269c111962",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425040721490",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-public-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-02",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aft_vpc",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc/vpc-0f723393151e1b961",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/22",
            "default_network_acl_id": "acl-03a117e5081fdc040",
            "default_route_table_id": "rtb-0ffe6d9596b68f999",
            "default_security_group_id": "sg-0a11a2f959ca656ad",
            "dhcp_options_id": "dopt-0df29b139336f4b99",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f723393151e1b961",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ffe6d9596b68f999",
            "owner_id": "425040721490",
            "tags": {
              "Name": "aft-management-vpc"
            },
            "tags_all": {
              "Name": "aft-management-vpc",
              "managed_by": "AFT"
            }
          },
          "dependencies": [
            "module.aft.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-004ae5f37157328ec",
            "dns_entry": [
              {
                "dns_name": "vpce-004ae5f37157328ec-gutjod5v.codebuild.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-004ae5f37157328ec-gutjod5v-us-east-1b.codebuild.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-004ae5f37157328ec-gutjod5v-us-east-1a.codebuild.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "codebuild.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z016959515FEWWDSIZ62R"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-004ae5f37157328ec",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-019d9a990d5b320bd",
              "eni-0e5b027e9f46896ca"
            ],
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-046eb52979681b58a"
            ],
            "service_name": "com.amazonaws.us-east-1.codebuild",
            "state": "available",
            "subnet_ids": [
              "subnet-0b1c35d6498b19240",
              "subnet-0d14726aba41bce43"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.codebuild",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codebuild"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-0094f9096edb9d8ed",
            "dns_entry": [
              {
                "dns_name": "vpce-0094f9096edb9d8ed-1dpifrnq.codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0094f9096edb9d8ed-1dpifrnq-us-east-1a.codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0094f9096edb9d8ed-1dpifrnq-us-east-1b.codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "codecommit.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0169779G4CM6WO21Q62"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0094f9096edb9d8ed",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-057ef5a3bbf77b3c8",
              "eni-08870b4ee6b2adfbd"
            ],
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-046eb52979681b58a"
            ],
            "service_name": "com.amazonaws.us-east-1.codecommit",
            "state": "available",
            "subnet_ids": [
              "subnet-0b1c35d6498b19240",
              "subnet-0d14726aba41bce43"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.codecommit",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codecommit"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-0523beb5d844b90a9",
            "dns_entry": [
              {
                "dns_name": "vpce-0523beb5d844b90a9-0r9zyhdg.codepipeline.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0523beb5d844b90a9-0r9zyhdg-us-east-1b.codepipeline.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0523beb5d844b90a9-0r9zyhdg-us-east-1a.codepipeline.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "codepipeline.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00259251ZAQHD8T2DV3U"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0523beb5d844b90a9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0217d96d57793b32b",
              "eni-04bd0bfaa74e770b9"
            ],
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-046eb52979681b58a"
            ],
            "service_name": "com.amazonaws.us-east-1.codepipeline",
            "state": "available",
            "subnet_ids": [
              "subnet-0b1c35d6498b19240",
              "subnet-0d14726aba41bce43"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.codepipeline",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codepipeline"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-02a3632d3b5f17923",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "id": "vpce-02a3632d3b5f17923",
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-079bbdd1d37a2e7e2",
              "rtb-0a5c4dddbca47655a",
              "rtb-0b245739e0ffedcbb"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "state": "available",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_region.aft-management"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-005a1b9daa2212ed0",
            "dns_entry": [
              {
                "dns_name": "vpce-005a1b9daa2212ed0-1phj2n2f.events.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-005a1b9daa2212ed0-1phj2n2f-us-east-1b.events.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-005a1b9daa2212ed0-1phj2n2f-us-east-1a.events.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "events.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00250429MP3ZF2NTOHO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-005a1b9daa2212ed0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08be3a51c89078de3",
              "eni-098b352ee73832e61"
            ],
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-046eb52979681b58a"
            ],
            "service_name": "com.amazonaws.us-east-1.events",
            "state": "available",
            "subnet_ids": [
              "subnet-0b1c35d6498b19240",
              "subnet-0d14726aba41bce43"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.events",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.events"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git-codecommit",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-0788ad4435ee56d6c",
            "dns_entry": [
              {
                "dns_name": "vpce-0788ad4435ee56d6c-hv9ibrlk.git-codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0788ad4435ee56d6c-hv9ibrlk-us-east-1a.git-codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0788ad4435ee56d6c-hv9ibrlk-us-east-1b.git-codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "git-codecommit.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z017110813Q9G4QAK7OMA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0788ad4435ee56d6c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-001c85039351b7868",
              "eni-0919cd172e8d6f6a8"
            ],
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-046eb52979681b58a"
            ],
            "service_name": "com.amazonaws.us-east-1.git-codecommit",
            "state": "available",
            "subnet_ids": [
              "subnet-0b1c35d6498b19240",
              "subnet-0d14726aba41bce43"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.git-codecommit",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.git-codecommit"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-0cbf924b22bd97aea",
            "dns_entry": [
              {
                "dns_name": "vpce-0cbf924b22bd97aea-xosj6trs.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cbf924b22bd97aea-xosj6trs-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cbf924b22bd97aea-xosj6trs-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z002593322HKARCUPURJR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0cbf924b22bd97aea",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-073b877ea1dc02236",
              "eni-07710c5e463a074cc"
            ],
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-046eb52979681b58a"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-0b1c35d6498b19240",
              "subnet-0d14726aba41bce43"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.kms",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.kms"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "lambda",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-0f0e33d977ddf268e",
            "dns_entry": [
              {
                "dns_name": "vpce-0f0e33d977ddf268e-vnmyb3r3.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f0e33d977ddf268e-vnmyb3r3-us-east-1b.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f0e33d977ddf268e-vnmyb3r3-us-east-1a.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "lambda.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01392062IGG93RDVA1PT"
              },
              {
                "dns_name": "lambda.us-east-1.api.aws",
                "hosted_zone_id": "Z003236820O4QF6Z6OXJJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0f0e33d977ddf268e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01163a16b816df7d7",
              "eni-0ecfce4e89712fae7"
            ],
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-046eb52979681b58a"
            ],
            "service_name": "com.amazonaws.us-east-1.lambda",
            "state": "available",
            "subnet_ids": [
              "subnet-0b1c35d6498b19240",
              "subnet-0d14726aba41bce43"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.lambda",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.lambda"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-014fc0d171b0a9dad",
            "dns_entry": [
              {
                "dns_name": "vpce-014fc0d171b0a9dad-z3ovgs3g.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-014fc0d171b0a9dad-z3ovgs3g-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-014fc0d171b0a9dad-z3ovgs3g-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01701341IF63AO8HR5X8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-014fc0d171b0a9dad",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02f22adfc81b79388",
              "eni-04a5c3dfce01636d7"
            ],
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-046eb52979681b58a"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-0b1c35d6498b19240",
              "subnet-0d14726aba41bce43"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.logs",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.logs"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-09ededab4b06420f9",
            "cidr_blocks": [
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-09ededab4b06420f9",
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-079bbdd1d37a2e7e2",
              "rtb-0a5c4dddbca47655a",
              "rtb-0b245739e0ffedcbb"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_region.aft-management"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-013eea1f62c8844ab",
            "dns_entry": [
              {
                "dns_name": "vpce-013eea1f62c8844ab-0zlak6fl.servicecatalog.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-013eea1f62c8844ab-0zlak6fl-us-east-1b.servicecatalog.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-013eea1f62c8844ab-0zlak6fl-us-east-1a.servicecatalog.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "servicecatalog.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03312891SG3WASUOLOJL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-013eea1f62c8844ab",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00ecb3c917ceb5d61",
              "eni-09225d0d88ae33293"
            ],
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-046eb52979681b58a"
            ],
            "service_name": "com.amazonaws.us-east-1.servicecatalog",
            "state": "available",
            "subnet_ids": [
              "subnet-0b1c35d6498b19240",
              "subnet-0d14726aba41bce43"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.servicecatalog",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.servicecatalog"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-0daf1aed5eb1c161c",
            "dns_entry": [
              {
                "dns_name": "vpce-0daf1aed5eb1c161c-s3y1y1w0.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0daf1aed5eb1c161c-s3y1y1w0-us-east-1a.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0daf1aed5eb1c161c-s3y1y1w0-us-east-1b.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sns.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03308803048G4KV8NIV0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0daf1aed5eb1c161c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0304e3c22d6a702d0",
              "eni-0ecfe50410e708a60"
            ],
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-046eb52979681b58a"
            ],
            "service_name": "com.amazonaws.us-east-1.sns",
            "state": "available",
            "subnet_ids": [
              "subnet-0b1c35d6498b19240",
              "subnet-0d14726aba41bce43"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.sns",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sns"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-0c52b93dd707c4fec",
            "dns_entry": [
              {
                "dns_name": "vpce-0c52b93dd707c4fec-qy55ixbv.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c52b93dd707c4fec-qy55ixbv-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c52b93dd707c4fec-qy55ixbv-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sqs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00327501B4PYOCM9JPNG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0c52b93dd707c4fec",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-018baab3ac744fa5e",
              "eni-058c98b52a0bbafd1"
            ],
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-046eb52979681b58a"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "state": "available",
            "subnet_ids": [
              "subnet-0b1c35d6498b19240",
              "subnet-0d14726aba41bce43"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.sqs",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sqs"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-0708567ceb9c821d1",
            "dns_entry": [
              {
                "dns_name": "vpce-0708567ceb9c821d1-fxglnn48.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0708567ceb9c821d1-fxglnn48-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0708567ceb9c821d1-fxglnn48-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00323541Y9CUKO5G4L9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0708567ceb9c821d1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07e952027285c6401",
              "eni-089325688938ce828"
            ],
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-046eb52979681b58a"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-0b1c35d6498b19240",
              "subnet-0d14726aba41bce43"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.ssm",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.ssm"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "states",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-06cee99d9589c3b3b",
            "dns_entry": [
              {
                "dns_name": "vpce-06cee99d9589c3b3b-cg5e735f.states.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06cee99d9589c3b3b-cg5e735f-us-east-1a.states.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06cee99d9589c3b3b-cg5e735f-us-east-1b.states.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "states.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0032743ODUW8BO4EU37"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-06cee99d9589c3b3b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01911e0be98dea8fa",
              "eni-0bfb7912bd06aa972"
            ],
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-046eb52979681b58a"
            ],
            "service_name": "com.amazonaws.us-east-1.states",
            "state": "available",
            "subnet_ids": [
              "subnet-0b1c35d6498b19240",
              "subnet-0d14726aba41bce43"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.states",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.states"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425040721490:vpc-endpoint/vpce-045275392795e34e9",
            "dns_entry": [
              {
                "dns_name": "vpce-045275392795e34e9-x1x6c83m.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-045275392795e34e9-x1x6c83m-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-045275392795e34e9-x1x6c83m-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z002573414FI6OAWML5UI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-045275392795e34e9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a47a7bf5739b8416",
              "eni-0d0f24ab5570c1dd6"
            ],
            "owner_id": "425040721490",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-046eb52979681b58a"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-0b1c35d6498b19240",
              "subnet-0d14726aba41bce43"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f723393151e1b961"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.sts",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sts"
          ]
        }
      ]
    }
  ]
}